--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
   font-family: 'Inter';
   font-weight: 400;
   line-height: 1.5;
-  background: var(--background_color) var(--background_image) no-repeat center;
+  background: var(--background_color) no-repeat center;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
